k8s/pipe.yaml
#kubectl get deployment/k8s-demo-kdb -o yaml > pipe.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"k8s-demo-kdb"},"name":"k8s-demo-kdb","namespace":"kdb"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"k8s-demo-kdb"}},"template":{"metadata":{"labels":{"app":"k8s-demo-kdb"}},"spec":{"containers":[{"env":[{"name":"WELCOME_NAME","value":"Ken"},{"name":"SPRING_PROFILES_ACTIVE","value":"prod"}],"image":"163091829738.dkr.ecr.eu-west-1.amazonaws.com/k8s-demo-kdb","name":"k8s-demo-kdb","ports":[{"c [...]
  creationTimestamp: 2019-10-09T12:32:06Z
  generation: 1
  labels:
    app: k8s-demo-kdb
  name: k8s-demo-kdb
  namespace: kdb
  resourceVersion: "30213411"
  selfLink: /apis/extensions/v1beta1/namespaces/kdb/deployments/k8s-demo-kdb
  uid: ce49a69f-ea90-11e9-8707-0adb3f62ebfc
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: k8s-demo-kdb
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: k8s-demo-kdb
    spec:
      containers:
      - env:
        - name: WELCOME_NAME
          value: Ken
        - name: SPRING_PROFILES_ACTIVE
          value: prod
        image: 163091829738.dkr.ecr.eu-west-1.amazonaws.com/k8s-demo-kdb
        imagePullPolicy: Always
        name: k8s-demo-kdb
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2019-10-09T12:32:08Z
    lastUpdateTime: 2019-10-09T12:32:08Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: 2019-10-09T12:32:06Z
    lastUpdateTime: 2019-10-09T12:32:08Z
    message: ReplicaSet "k8s-demo-kdb-d8bbd696f" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
